ajout fwk date-fns et loadash-es et reconception de problem-card.component.ts et création d'un packahe util et correction warning localization

--- a/src/app/components/Components/Problem/problem-card.component.html
+++ b/src/app/components/Components/Problem/problem-card.component.html
@@ -230,7 +230,7 @@
                             {{ currentUserProblemsItem.description }}
                         </td>
                         <td>
-                            {{ currentUserProblemsItem.status || '-' }}
+                            {{ getLocalizedStatus(currentUserProblemsItem.status) }}
                         </td>
                         <td>
                             {{ currentUserProblemsItem.creationDate | date }}
