--- a/src/app/components/Pages/problem-add.component.html
+++ b/src/app/components/Pages/problem-add.component.html
@@ -7,8 +7,8 @@
 
 <div class="modal-header">
     <h4 class="modal-title">
-        <i class="text-info me-2 bi-plus-circle"></i>
-        <span i18n>Create New Problem</span>
+        <i class="text-info me-2" [ngClass]="isEditMode ? 'bi-pencil-square' : 'bi-plus-circle'"></i>
+        <span>{{ getModalTitle() }}</span>
     </h4>
     <button type="button" class="btn-close" aria-label="Close" (click)="onCancel()"></button>
 </div>
@@ -16,11 +16,12 @@
     <app-problem-form
         [initialValue]="initialValue"
         [showActions]="false"
+        [isEditMode]="isEditMode"
         (submitProblem)="onProblemSubmit($event)"
         (cancel)="onCancel()">
     </app-problem-form>
 </div>
 <div class="modal-footer">
     <button type="button" class="btn btn-secondary" (click)="onCancel()" i18n>Cancel</button>
-    <button type="button" class="btn btn-primary" (click)="triggerFormSubmit()" i18n>Create Problem</button>
+    <button type="button" class="btn btn-primary" (click)="triggerFormSubmit()">{{ getSubmitButtonLabel() }}</button>
 </div>
