--- a/src/app/components/Components/side-bar.component.html
+++ b/src/app/components/Components/side-bar.component.html
@@ -53,6 +53,25 @@
             </li>
         </ul>
     </div>
+    <div class="mb-auto">
+        <h6 class="small px-3">
+            Administration
+        </h6>
+        <ul class="list-unstyled text-uppercase fw-semibold">
+            <li>
+                <a 
+                    class="link-sidebar text-decoration-none px-3 py-1 icon-link d-flex"
+                    [class.text-muted]="!isAdmin()"
+                    [class.pe-none]="!isAdmin()"
+                    [routerLink]="isAdmin() ? [currentLocale(), 'user-management'] : null"
+                    [routerLinkActive]="isAdmin() ? ['link-sidebar-active'] : []"
+                    [attr.aria-disabled]="!isAdmin()">
+                    <i class="bi-people me-2 fs-5"></i>
+                    <span i18n>User Management</span>
+                </a>
+            </li>
+        </ul>
+    </div>
     <hr class="mb-0">
     <div class="fw-semibold text-uppercase">
         <a class="link-sidebar px-3 py-1 icon-link text-decoration-none d-flex" [routerLink]="[currentLocale(), 'admin']" [routerLinkActive]="['link-sidebar-active']">
