ajout écran d'accueil

--- a/src/app/components/Components/header.component.html
+++ b/src/app/components/Components/header.component.html
@@ -8,9 +8,9 @@
 <header class="py-3 border-bottom bg-body-tertiary">
     <div class="container-fluid gap-3 align-items-center d-flex">
         <div class="d-flex">
-            <a routerLink="/">
-                <i class="text-warning bi-flower1 fs-1"></i>
-            </a>
+            <button type="button" class="btn btn-link text-decoration-none p-0" (click)="navigateToHome()" i18n-title title="Home">
+                <i class="text-warning bi-house-door fs-1"></i>
+            </button>
             <div class="d-flex flex-column ms-3">
                 <span>
                     An Open Source application
