ajout gestion des erreurs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
 -->
 
 <div class="div-1 h-100">
+    <app-toast-container></app-toast-container>
     <div class="div-2">
         <app-header></app-header>
     </div>
