problème de la sidebar mouvante résolu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,10 +10,10 @@
     <div class="div-2">
         <app-header></app-header>
     </div>
-    <div>
+    <div class="div-sidebar">
         <app-side-bar class="side-bar-1"></app-side-bar>
     </div>
-    <div class="p-4">
+    <div class="div-main p-4">
         <router-outlet></router-outlet>
     </div>
 </div>
