--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,15 +1,29 @@
 .div-1 {
-    display: grid;
-    grid-template-columns: max-content 1fr;
-    grid-template-rows: max-content auto;
+  display: grid;
+  grid-template-columns: max-content 1fr;
+  grid-template-rows: max-content 1fr;
+  min-height: 0;
 }
 
 .div-2 {
-    grid-column-start: 1;
-    grid-column-end: -1;
+  grid-column: 1 / -1;
+  grid-row: 1;
+}
+
+.div-sidebar {
+  grid-column: 1;
+  grid-row: 2;
+  min-height: 0;
+}
+
+.div-main {
+  grid-column: 2;
+  grid-row: 2;
+  min-height: 0;
+  overflow: auto;
 }
 
 .side-bar-1 {
-    height: 100%;
+  height: 100%;
 }
 
